--- a/nodes/plugins/string/ControlDragAndDrop/ControlDragAndDrop.csproj
+++ b/nodes/plugins/string/ControlDragAndDrop/ControlDragAndDrop.csproj
@@ -10,7 +10,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <ReferencePath>..\..\..\..\..\..\..\..\app\vvvv_45beta34.1_x64\lib\core\;..\..\..\..\..\..\..\..\app\vvvv_45beta34.1_x64\lib\nodes\plugins\</ReferencePath>
+    <ReferencePath>..\..\..\..\..\..\..\..\app\vvvv_50alpha34.103.1_x64\lib\core\;..\..\..\..\..\..\..\..\app\vvvv_50alpha34.103.1_x64\lib\nodes\plugins\;..\..\..\..\..\..\..\..\app\vvvv_45beta34.1_x64\lib\core\;..\..\..\..\..\..\..\..\app\vvvv_45beta34.1_x64\lib\nodes\plugins\</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
