--- a/src/packages.config
+++ b/src/packages.config
@@ -3,6 +3,7 @@
   <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.6" targetFramework="net461" />
+  <package id="SimMetrics.Net" version="1.0.3" targetFramework="net461" />
   <package id="VVVV.Packs.Timing" version="0.8.2" targetFramework="net461" />
   <package id="VVVV.Utils" version="35.0.0" targetFramework="net461" />
 </packages>
