--- a/src/PDDN/PDDN/PDDN.csproj
+++ b/src/PDDN/PDDN/PDDN.csproj
@@ -33,31 +33,31 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
+      <HintPath>..\..\packages\VVVV.SlimDX.1.0.3\lib\net40\x86\SlimDX.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition.CodePlex">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.ComponentModel.Composition.CodePlex.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.ComponentModel.Composition.CodePlex, Version=4.1.2.0, Culture=neutral, PublicKeyToken=13e5ffd4e05db186, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\VVVV.System.ComponentModel.Composition.Codeplex.2.5.1\lib\net40\System.ComponentModel.Composition.CodePlex.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive.Core">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Core.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.4.0.0-preview00001\lib\net46\System.Reactive.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Interfaces.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Core, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.Core.4.0.0-preview00001\lib\net46\System.Reactive.Core.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.Linq">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Linq.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Interfaces, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.Interfaces.4.0.0-preview00001\lib\net45\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.PlatformServices.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Linq, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.Linq.4.0.0-preview00001\lib\net46\System.Reactive.Linq.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reflection.Context.CodePlex">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reflection.Context.CodePlex.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.PlatformServices, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.PlatformServices.4.0.0-preview00001\lib\net46\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Windows.Threading, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reactive.Windows.Threading.4.0.0-preview00001\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,28 +65,32 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="VVVV.Core">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Core.dll</HintPath>
+    <Reference Include="VVVV.Core, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\VVVV.Core.35.12.0-develop-3251\lib\net46\VVVV.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Hosting">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Hosting.dll</HintPath>
+    <Reference Include="VVVV.Hosting, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Hosting.dll</HintPath>
+    </Reference>
+    <Reference Include="VVVV.Nodes.Generic, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Nodes.Generic.dll</HintPath>
+    </Reference>
+    <Reference Include="VVVV.PluginInterfaces, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.PluginInterfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="VVVV.Utils, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\VVVV.Utils.35.12.0-develop-3251\lib\net46\VVVV.Utils.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.PluginInterfaces">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.PluginInterfaces.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="VVVV.Utils3rdParty, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Utils3rdParty.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.Utils">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Utils.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VVVV.Utils3rdParty">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Utils3rdParty.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VVVV.UtilsIL">
-      <HintPath>..\..\..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.UtilsIL.dll</HintPath>
+    <Reference Include="VVVV.UtilsIL, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\VVVV.UtilsIL.35.12.0-develop-3251\lib\net46\VVVV.UtilsIL.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -102,6 +106,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets" Condition="Exists('..\..\packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets'))" />
+    <Error Condition="!Exists('..\..\packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets'))" />
+    <Error Condition="!Exists('..\..\packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets'))" />
+    <Error Condition="!Exists('..\..\packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets'))" />
+  </Target>
+  <Import Project="..\..\packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets" Condition="Exists('..\..\packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets')" />
+  <Import Project="..\..\packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets" Condition="Exists('..\..\packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets')" />
+  <Import Project="..\..\packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets" Condition="Exists('..\..\packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
