--- a/src/mp.essentials.csproj
+++ b/src/mp.essentials.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>mp.essentials</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.1.1.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.4.1.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPlus.Extensions, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.Extensions.2.0.0.0\lib\net45\EPPlus.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Excel, Version=2.1.2.3, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dependencies\Excel.dll</HintPath>
@@ -59,43 +67,38 @@
     <Reference Include="QuickGraph">
       <HintPath>Dependencies\QuickGraph.dll</HintPath>
     </Reference>
-    <Reference Include="SharpMessage, Version=2.9.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\SharpMessage.2.9.6\lib\net46\SharpMessage.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="SharpMessage, Version=2.9.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\SharpMessage.2.9.10\lib\net46\SharpMessage.dll</HintPath>
     </Reference>
     <Reference Include="SimMetrics.Net, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\SimMetrics.Net.1.0.3\lib\net45\SimMetrics.Net.dll</HintPath>
     </Reference>
-    <Reference Include="SlimDX">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\SlimDX.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
+      <HintPath>packages\VVVV.SlimDX.1.0.3\lib\net40\x86\SlimDX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition.CodePlex">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.ComponentModel.Composition.CodePlex.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.ComponentModel.Composition.CodePlex, Version=4.1.2.0, Culture=neutral, PublicKeyToken=13e5ffd4e05db186, processorArchitecture=MSIL">
+      <HintPath>packages\VVVV.System.ComponentModel.Composition.Codeplex.2.5.1\lib\net40\System.ComponentModel.Composition.CodePlex.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Reactive.Core">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Core.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.4.0.0-preview00001\lib\net46\System.Reactive.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Interfaces.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Core, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.Core.4.0.0-preview00001\lib\net46\System.Reactive.Core.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.Linq">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.Linq.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Interfaces, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.Interfaces.4.0.0-preview00001\lib\net45\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reactive.PlatformServices.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.Linq, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.Linq.4.0.0-preview00001\lib\net46\System.Reactive.Linq.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reflection.Context.CodePlex">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\System.Reflection.Context.CodePlex.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="System.Reactive.PlatformServices, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.PlatformServices.4.0.0-preview00001\lib\net46\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Windows.Threading, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Reactive.Windows.Threading.4.0.0-preview00001\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -107,36 +110,32 @@
     <Reference Include="vJoyInterfaceWrap">
       <HintPath>Dependencies\vJoyInterfaceWrap.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.Core">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Core.dll</HintPath>
+    <Reference Include="VVVV.Core, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\VVVV.Core.35.12.0-develop-3251\lib\net46\VVVV.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Hosting">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Hosting.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="VVVV.Hosting, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Hosting.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.Nodes.Generic">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Nodes.Generic.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="VVVV.Nodes.Generic, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Nodes.Generic.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.Packs.Timing, Version=0.8.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\VVVV.Packs.Timing.0.8.2\lib\net46\VVVV.Packs.Timing.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VVVV.PluginInterfaces">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.PluginInterfaces.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="VVVV.PluginInterfaces, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.PluginInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="VVVV.Utils, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\VVVV.Utils.35.0.0\lib\net46\VVVV.Utils.dll</HintPath>
+      <HintPath>packages\VVVV.Utils.35.12.0-develop-3251\lib\net46\VVVV.Utils.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Utils3rdParty">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.Utils3rdParty.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="VVVV.Utils3rdParty, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\lib\AnyCPU\VVVV.Utils3rdParty.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.UtilsIL">
-      <HintPath>..\..\..\..\..\app\vvvv-vpm\lib\core\VVVV.UtilsIL.dll</HintPath>
+    <Reference Include="VVVV.UtilsIL, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\VVVV.UtilsIL.35.12.0-develop-3251\lib\net46\VVVV.UtilsIL.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -158,7 +157,10 @@
     <Compile Include="devices\DevicesDirectInputNode.cs" />
     <Compile Include="devices\ValueTouchProcessorNode.cs" />
     <Compile Include="devices\vjoy.cs" />
+    <Compile Include="excel\ExcelEPPlus.cs" />
     <Compile Include="excel\ExcelReader.cs" />
+    <Compile Include="excel\OoXmlCell.cs" />
+    <Compile Include="excel\SplitNodes.cs" />
     <Compile Include="generic\CastToAll.cs" />
     <Compile Include="generic\GenericAsObjectNode.cs" />
     <Compile Include="generic\GenericKeepLastNode.cs" />
@@ -259,10 +261,24 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets" Condition="Exists('packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\VVVV.Hosting.35.12.0-develop-3251\build\net46\VVVV.Hosting.targets'))" />
+    <Error Condition="!Exists('packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets'))" />
+    <Error Condition="!Exists('packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets'))" />
+    <Error Condition="!Exists('packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets'))" />
+  </Target>
+  <Import Project="packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets" Condition="Exists('packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets')" />
+  <Import Project="packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets" Condition="Exists('packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets')" />
+  <Import Project="packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets" Condition="Exists('packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
