--- a/src/packages.config
+++ b/src/packages.config
@@ -1,10 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.1.1" targetFramework="net461" />
+  <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="PowerArgs" version="2.8.1.0" targetFramework="net461" />
-  <package id="SharpMessage" version="2.9.6" targetFramework="net461" />
+  <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
   <package id="SimMetrics.Net" version="1.0.3" targetFramework="net461" />
+  <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="VVVV.Core" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="VVVV.Hosting" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="VVVV.Nodes.Generic" version="35.12.0-develop-3251" targetFramework="net461" />
   <package id="VVVV.Packs.Timing" version="0.8.2" targetFramework="net461" />
-  <package id="VVVV.Utils" version="35.0.0" targetFramework="net461" />
+  <package id="VVVV.PluginInterfaces" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="VVVV.SlimDX" version="1.0.3" targetFramework="net461" />
+  <package id="VVVV.System.ComponentModel.Composition.Codeplex" version="2.5.1" targetFramework="net461" />
+  <package id="VVVV.Utils" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="VVVV.Utils3rdParty" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="VVVV.UtilsIL" version="35.12.0-develop-3251" targetFramework="net461" />
 </packages>
