Added a simple Pulse animation node

--- a/src/packages.config
+++ b/src/packages.config
@@ -3,7 +3,10 @@
   <package id="EPPlus" version="4.1.1" targetFramework="net461" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
-  <package id="md-stdl" version="0.1.27-beta" targetFramework="net461" />
+  <package id="md-stdl" version="0.1.32-beta" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="mp.pddn" version="1.1.8" targetFramework="net461" />
   <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
@@ -30,4 +33,5 @@
   <package id="VVVV.Utils" version="35.12.0-develop-3251" targetFramework="net461" />
   <package id="VVVV.Utils3rdParty" version="35.12.0-develop-3251" targetFramework="net461" />
   <package id="VVVV.UtilsIL" version="35.12.0-develop-3251" targetFramework="net461" />
+  <package id="xxHash.NET" version="1.0.2" targetFramework="net461" />
 </packages>
