--- a/src/mp.essentials.csproj
+++ b/src/mp.essentials.csproj
@@ -42,6 +42,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dependencies\Excel.dll</HintPath>
     </Reference>
+    <Reference Include="Extensions.Data.xxHash, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\xxHash.NET.1.0.2\lib\net40\Extensions.Data.xxHash.dll</HintPath>
+    </Reference>
     <Reference Include="GraphSharp">
       <HintPath>Dependencies\GraphSharp.dll</HintPath>
     </Reference>
@@ -52,8 +55,8 @@
     <Reference Include="LzmaSharp">
       <HintPath>Dependencies\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.1.27.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.1.27-beta\lib\net461\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.1.32.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.32-beta\lib\net461\md.stdl.dll</HintPath>
     </Reference>
     <Reference Include="mp.pddn, Version=1.1.8.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\mp.pddn.1.1.8\lib\net461\mp.pddn.dll</HintPath>
@@ -100,6 +103,15 @@
     <Reference Include="System.Interactive, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>packages\System.Interactive.3.1.1\lib\net45\System.Interactive.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives, Version=4.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
@@ -127,7 +139,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="vJoyInterfaceWrap">
       <HintPath>Dependencies\vJoyInterfaceWrap.dll</HintPath>
@@ -205,12 +216,14 @@
     <Compile Include="network\http\ClientSendNodes.cs" />
     <Compile Include="network\http\HeadersNodes.cs" />
     <Compile Include="network\http\HttpClient.cs" />
+    <Compile Include="notui\AbstractBehaviorNode.cs" />
     <Compile Include="notui\AbstractElementNode.cs" />
+    <Compile Include="notui\BasicBehaviors.cs" />
     <Compile Include="notui\BasicElementNodes.cs" />
     <Compile Include="notui\GenericBehaviorNodes.cs" />
     <Compile Include="notui\GenericElementInstanceNodes.cs" />
     <Compile Include="notui\GenericElementPrototypeNodes.cs" />
-    <Compile Include="notui\GuiElementInfoNode.cs" />
+    <Compile Include="notui\ElementInfoNode.cs" />
     <Compile Include="notui\ContextNode.cs" />
     <Compile Include="notui\EventsSplit.cs" />
     <Compile Include="notui\NotuiUtils.cs" />
@@ -244,6 +257,7 @@
     <Compile Include="string\StringSHA_256Node.cs" />
     <Compile Include="network\FileDownloadNode.cs" />
     <Compile Include="network\UDPAsyncNode.cs" />
+    <Compile Include="string\XxHashNode.cs" />
     <Compile Include="transform\CzachurskiRectanglePackerNode.cs" />
     <Compile Include="transform\ChevyRayRectanglePackerNode.cs" />
     <Compile Include="transform\TransformGetQuaternionNode.cs" />
@@ -306,6 +320,11 @@
   <Import Project="packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets" Condition="Exists('packages\VVVV.Nodes.Generic.35.12.0-develop-3251\build\net46\VVVV.Nodes.Generic.targets')" />
   <Import Project="packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets" Condition="Exists('packages\VVVV.PluginInterfaces.35.12.0-develop-3251\build\net46\VVVV.PluginInterfaces.targets')" />
   <Import Project="packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets" Condition="Exists('packages\VVVV.Utils3rdParty.35.12.0-develop-3251\build\net46\VVVV.Utils3rdParty.targets')" />
+  <Import Project="packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
+  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
+    <Error Condition="!Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
+    <Error Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
