--- a/packages.config
+++ b/packages.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="4.5.2.1" targetFramework="net47" />
+  <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
-  <package id="LZMA-SDK" version="18.1.0" targetFramework="net47" />
+  <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
   <package id="md-stdl" version="0.2.3-beta" targetFramework="net47" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="mp.pddn" version="1.1.33" targetFramework="net47" />
   <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
@@ -16,14 +13,13 @@
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
   <package id="SimMetrics.Net" version="1.0.4" targetFramework="net461" />
-  <package id="System.Interactive" version="3.1.1" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Core" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Interfaces" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Linq" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.PlatformServices" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Windows.Threading" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.PlatformServices" version="4.0.0" targetFramework="net47" />
   <package id="unvell.ReoGrid.dll" version="2.1.0.0" targetFramework="net47" />
   <package id="xxHash.NET" version="1.0.2" targetFramework="net461" />
 </packages>
