--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cyotek.Windows.Forms.ColorPicker" version="1.7.2" targetFramework="net47" />
   <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
