added vector size support to SequentialAdd

--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -399,7 +399,9 @@
       <DependentUpon>NumberGrid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="devices\Usb\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
